# SPDX-FileCopyrightText: © 2022 the SimWeights contributors
#
# SPDX-License-Identifier: BSD-2-Clause

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simweights"
readme = "README.rst"
requires-python = "~=3.7"
license = {file = "LICENSES/BSD-2-Clause.txt"}
authors = [{name = "Kevin Meagher"}]
keywords = ["python", "science", "astronomy", "astrophysics", "IceCube", "neutrino", "simulation"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics',
    ]
dependencies = ["numpy>=1.21.2", "scipy"]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [ "h5py", "tables", "pandas", "uproot", "pytest-cov"]
docs = ["sphinx","sphinx-rtd-theme","pandas"]
dev = ["pytest","pre-commit","reuse","black","ruff","pylint","mypy"]

[project.scripts]
simweights = "simweights.cmdline:main"

[project.urls]
Source = "https://github.com/icecube/simweights"
Documentation = "https://docs.icecube.aq/simweights/main"
Collaboration = "https://icecube.wisc.edu"

[tool.black]
line-length = 108
target-version = ['py38']

[tool.coverage.run]
source = ["simweights"]
command_line = "-m pytest"
omit = ["*/simweights/cmdline.py"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
show_error_codes = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
stict = true

[tool.pylint.format]
max-line-length = "108"

[tool.pylint.messages_control]
disable = "C0114"

[tool.pytest.ini_options]
minversion = 7.0
testpaths = ["tests"]
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = ["error"]
addopts = ["-ra", "--strict-config", "--strict-markers", "--cov=simweights", "-W ignore"]

[tool.doc8]
max-line-length=108

[tool.ruff]
select = ["ALL"]
fixable = ["I"]
ignore = [
    "D213",   # multi-line-summary-second-line incompatible with multi-line-summary-first-line
    "D203",   # one-blank-line-before-class" incompatible with no-blank-line-before-class
    "D401",   # non-imperative-mood
    "D417",   # undocumented-param
    "ANN101", # missing-type-self
    "ANN401", # any-type
    "FBT",    # flake8-boolean-trap
    "INP",    # flake8-no-pep420
    "T20",    # flake8-print
    "TCH",    # flake8-type-checking
    "S101",   # assert-used
    ]
line-length = 108
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"contrib/*" = ["D"]
"docs/*" = ["D"]
"tests/*" = [
    "D",      # pydocstyle
    "N",      # pep8-naming
    "ANN",    # flake8-annotations
    "PT",     # flake8-pytest-style
    "PGH001", # eval
    "SLF001", # private-member-access
    "PLR2004",# magic-value-comparison
    "PLR0915",# too-many-statements
    "S307",   # suspicious-eval-usage
    "PERF203",# try-except-in-loop
    ]
"examples/*" = [
    "D",      # pydocstyle
    "F401",   # unused-import
]
