# SPDX-FileCopyrightText: © 2022 the SimWeights contributors
#
# SPDX-License-Identifier: BSD-2-Clause

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simweights"
readme = "README.rst"
requires-python = "~=3.7"
license = {file = "LICENSES/BSD-2-Clause.txt"}
authors = [{name = "Kevin Meagher"}]
keywords = ["python", "science", "astronomy", "astrophysics", "IceCube", "neutrino", "simulation"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics',
    ]
dependencies = ["numpy>=1.21.2", "scipy"]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = ["h5py", "tables < 3.8; python_version < '3.9'", "tables", "pandas", "uproot", "pytest-cov"]
docs = ["sphinx","sphinx-rtd-theme","pandas"]
dev = ["pytest","pre-commit","reuse","black","ruff","pylint","mypy"]

[project.scripts]
simweights = "simweights.cmdline:main"

[project.urls]
Source = "https://github.com/icecube/simweights"
Documentation = "https://docs.icecube.aq/simweights/main"
Collaboration = "https://icecube.wisc.edu"

[tool.pytest.ini_options]
minversion = 7.0
testpaths = ["tests"]
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = ["error"]
addopts = ["-ra", "--strict-config", "--strict-markers", "--cov=simweights", "-W ignore"]

[tool.coverage.run]
source = ["simweights"]
command_line = "-m pytest"
omit = ["*/simweights/cmdline.py"]

[tool.coverage.report]
exclude_also = ["from numpy.typing import"]

[tool.codespell]
skip = '_build'
ignore-words-list = 'livetime'

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
show_error_codes = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.pylint.format]
max-line-length = "128"

[tool.pylint.messages_control]
disable = "C0114"

[tool.ruff]
select = ["ALL"]
fixable = ["I"]
ignore = [
    "ANN401", # any-type
    "FBT",    # flake8-boolean-trap
    "S101",   # assert-used
    "COM812", #confilcts with ruff formatter
    "ISC001", #confilcts with ruff formatter
    ]
line-length = 128
target-version = "py38"
namespace-packages = ["examples", "contrib", "docs"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"contrib/*" = ["T201"]
"tests/*" = [
    "D",      # pydocstyle
    "N",      # pep8-naming
    "ANN",    # flake8-annotations
    "PT",     # flake8-pytest-style
    "PGH001", # eval
    "SLF001", # private-member-access
    "PLR2004",# magic-value-comparison
    "PLR0915",# too-many-statements
    "S307",   # suspicious-eval-usage
    ]
"examples/*" = [
    "D",      # pydocstyle
    "F401",   # unused-import
    "T201",    # flake8-print
]

[tool.doc8]
max-line-length=128
